fix: remove duplicate scrollbars

--- a/src/components/DestinationSelector/DestinationSelector.module.scss
+++ b/src/components/DestinationSelector/DestinationSelector.module.scss
@@ -17,7 +17,6 @@
   list-style: none;
   margin: 0;
   max-height: 100%;
-  overflow: scroll;
   padding: 1rem 0 0;
 
   li:not(:first-child) > .station {
