--- a/src/components/StationSearch/StationSearch.module.scss
+++ b/src/components/StationSearch/StationSearch.module.scss
@@ -40,7 +40,6 @@
   list-style: none;
   margin: 0;
   max-height: 100%;
-  overflow: scroll;
   padding: 0;
 
   li:not(:first-child) > .suggestion {
