--- a/src/components/StatusCreator/StatusCreator.module.scss
+++ b/src/components/StatusCreator/StatusCreator.module.scss
@@ -18,7 +18,6 @@
   gap: 1rem;
   margin: 0;
   max-height: 100%;
-  overflow: scroll;
   padding: 0 1rem;
 }
 
