--- a/src/components/TripSelector/TripSelector.module.scss
+++ b/src/components/TripSelector/TripSelector.module.scss
@@ -18,7 +18,6 @@
   list-style: none;
   margin: 0;
   max-height: 100%;
-  overflow: scroll;
   padding: 1rem 0;
 }
 
